--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/src/phaser.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.8.9/brython.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
