--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.22.0/dist/phaser-arcade-physics.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.8.9/brython_stdlib.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
